package S191098026;

public interface Linable 
{
    public void setPosition(Position position);
    public Position getPosition();
    public int getValue();
}
